Document tags apis then test as well
