# app/Http/Controllers/v1/TagController.php
@@ -11,10 +11,39 @@ use Illuminate\Http\Request;
 class TagController extends Controller
 {
     /**
-     * Display a listing of the resource.
-     *
-     * @return TagResource
-     */
+    * @OA\Get(
+    *  path="/api/v1/tags",
+    *  operationId="getListOfAllItems",
+    *  summary="get list of all items",
+    *  tags={"Tags"},
+    *
+    *  @OA\Parameter(
+    *       name="access_token",
+    *       required=true,
+    *       in="header",
+    *       example="4fVB9SZidiBAADD2333nLZxxbWk92UcPQkwM8k",
+    *       @OA\Schema(
+    *           type="string"
+    *       )
+    *   ),
+    *
+    *   @OA\Response(
+    *      response=200,
+    *       description="Success",
+    *      @OA\MediaType(
+    *           mediaType="application/json",
+    *      )
+    *   ),
+    *   @OA\Response(
+    *      response=404,
+    *      description="not found"
+    *   ),
+    *)
+    * Display a listing of the resource.
+    *
+    * @return TagResource
+    * @throws \Illuminate\Contracts\Container\BindingResolutionException
+    */
     public function index(): TagResource
     {
         return new TagResource(["data" => app()->make(TagRepositoryInterface::class)
@@ -22,11 +51,47 @@ class TagController extends Controller
     }
 
     /**
-     * Store a newly created resource in storage.
-     *
-     * @param  \Illuminate\Http\Request  $request
-     * @return TagResource
-     */
+    * @OA\Post(
+    *  path="/api/v1/tags",
+    *  operationId="postANewItem",
+    *  summary="define a new item",
+    *  tags={"Tags"},
+    *
+    *  @OA\Parameter(
+    *       name="access_token",
+    *       required=true,
+    *       in="header",
+    *       example="4fVB9SZidiBAADD2333nLZxxbWk92UcPQkwM8k",
+    *       @OA\Schema(
+    *           type="string"
+    *       )
+    *   ),
+    *
+    *   @OA\RequestBody(
+    *       required=true,
+    *       @OA\JsonContent(ref="#/components/schemas/TagStoreRequest")
+    *   ),
+    *
+    *   @OA\Response(
+    *      response=200,
+    *       description="Success",
+    *      @OA\MediaType(
+    *           mediaType="application/json",
+    *      )
+    *   ),
+    *
+    *   @OA\Response(
+    *      response=404,
+    *      description="not found"
+    *   ),
+    *)
+    *
+    * Store a newly created resource in storage.
+    *
+    * @param \Illuminate\Http\Request $request
+    * @return TagResource
+    * @throws \Illuminate\Contracts\Container\BindingResolutionException
+    */
     public function store(Request $request): TagResource
     {
         return new TagResource(["data" => app()->make(TagRepositoryInterface::class)
@@ -34,6 +99,47 @@ class TagController extends Controller
     }
 
     /**
+    * @OA\Get(
+    *  path="/api/v1/tags/{tagId}",
+    *  operationId="getAppItemById",
+    *  summary="get app item by id",
+    *  tags={"Tags"},
+    *
+    *  @OA\Parameter(
+    *       name="access_token",
+    *       required=true,
+    *       in="header",
+    *       example="4fVB9SZidiBAADD2333nLZxxbWk92UcPQkwM8k",
+    *       @OA\Schema(
+    *           type="string"
+    *       )
+    *   ),
+    *
+    *  @OA\Parameter(
+    *       description="ID of tag",
+    *       name="tagId",
+    *       required=true,
+    *       in="path",
+    *       example="1",
+    *       @OA\Schema(
+    *           type="integer",
+    *           format="int64"
+    *       )
+    *   ),
+    *
+    *   @OA\Response(
+    *      response=200,
+    *       description="Success",
+    *      @OA\MediaType(
+    *           mediaType="application/json",
+    *      )
+    *   ),
+    *   @OA\Response(
+    *      response=404,
+    *      description="not found"
+    *   ),
+    *)
+    *
      * Display the specified resource.
      *
      * @param int $id
@@ -47,6 +153,53 @@ class TagController extends Controller
     }
 
     /**
+    * @OA\Put(
+    *  path="/api/v1/tags/{tagId}",
+    *  operationId="updateTagItemById",
+    *  summary="update Tag item by id",
+    *  tags={"Tags"},
+    *
+    *  @OA\Parameter(
+    *       name="access_token",
+    *       required=true,
+    *       in="header",
+    *       example="4fVB9SZidiBAADD2333nLZxxbWk92UcPQkwM8k",
+    *       @OA\Schema(
+    *           type="string"
+    *       )
+    *   ),
+    *
+    *  @OA\Parameter(
+    *       description="ID of Tag",
+    *       name="tagId",
+    *       required=true,
+    *       in="path",
+    *       example="1",
+    *       @OA\Schema(
+    *           type="integer",
+    *           format="int64"
+    *       )
+    *   ),
+    *
+    *   @OA\RequestBody(
+    *       required=true,
+    *       @OA\JsonContent(ref="#/components/schemas/TagStoreRequest")
+    *   ),
+    *
+    *   @OA\Response(
+    *      response=200,
+    *       description="Success",
+    *      @OA\MediaType(
+    *           mediaType="application/json",
+    *      )
+    *   ),
+    *
+    *   @OA\Response(
+    *      response=404,
+    *      description="not found"
+    *   ),
+    *)
+    *
      * Update the specified resource in storage.
      *
      * @param \Illuminate\Http\Request $request
@@ -61,6 +214,47 @@ class TagController extends Controller
     }
 
     /**
+    * @OA\Delete(
+    *  path="/api/v1/tags/{tagId}",
+    *  operationId="removeAnItemById",
+    *  summary="remove and app by id",
+    *  tags={"Tags"},
+    *
+    *  @OA\Parameter(
+    *       name="access_token",
+    *       required=true,
+    *       in="header",
+    *       example="4fVB9SZidiBAADD2333nLZxxbWk92UcPQkwM8k",
+    *       @OA\Schema(
+    *           type="string"
+    *       )
+    *   ),
+    *
+    *  @OA\Parameter(
+    *       description="ID of tag",
+    *       name="tagId",
+    *       required=true,
+    *       in="path",
+    *       example="1",
+    *       @OA\Schema(
+    *           type="integer",
+    *           format="int64"
+    *       )
+    *   ),
+    *
+    *   @OA\Response(
+    *      response=200,
+    *       description="Success",
+    *      @OA\MediaType(
+    *           mediaType="application/json",
+    *      )
+    *   ),
+    *   @OA\Response(
+    *      response=404,
+    *      description="not found"
+    *   ),
+    *)
+    *
      * Remove the specified resource from storage.
      *
      * @param int $id
